# LabsCPP

./: .gitignore  CMakeLists.txt
Lab1/: CMakeLists.txt  Class.h  Lab1.h  Lab1lib.cpp  main.cpp
Lab2/: main.cpp
Lab3/: CMakeLists.txt  Lab3.cpp  Lab3.h  diagram.puml  main.cpp
Lab4/: CMakeLists.txt  main.cpp  stack.cpp  stack.h
Lab5/: CMakeLists.txt  Exp.h  main.cpp
Lab6/: CMakeLists.txt  lab6.cpp  lab6.h  test.txt  testBin.txt
Lab8/: CMakeLists.txt  Lab8.cpp  Lab8.h
