cmake_minimum_required(VERSION 3.26)
project(LabsCPP)

set(CMAKE_CXX_STANDARD 17)

include_directories(Lab1)
include_directories(Lab2)
include_directories(Lab3)
include_directories(Lab4)
include_directories(Lab5)
include_directories(Lab6)
include_directories(Lab8)



add_subdirectory(Lab1)
add_subdirectory(Lab2)
add_subdirectory(Lab3)
add_subdirectory(Lab4)
add_subdirectory(Lab5)
add_subdirectory(Lab6)
add_subdirectory(Lab8)